--- a/index.html
+++ b/index.html
@@ -1588,6 +1588,7 @@
         </div>
       </section>
 
+      <!-- ===================== MODIFIÉ : FORMATION ===================== -->
       <section id="epreuveE5_formation" aria-labelledby="e5f-title">
         <h2 id="e5f-title">Missions réalisées en formation</h2>
 
@@ -1598,10 +1599,10 @@
             download
             target="_blank"
           >
-            <span
-              >Découverte et présentation des réseaux sans-fil Wi-Fi /
-              Bluetooth</span
-            >
+            <span>
+              Découverte et présentation des réseaux sans-fil Wi-Fi / Bluetooth
+              <small>MF 01</small>
+            </span>
           </a>
 
           <a
@@ -1610,7 +1611,10 @@
             download
             target="_blank"
           >
-            <span>Étude et mise en œuvre des protocoles ICMP et ARP</span>
+            <span>
+              Étude et mise en œuvre des protocoles ICMP et ARP
+              <small>MF 02</small>
+            </span>
           </a>
 
           <a
@@ -1619,9 +1623,10 @@
             download
             target="_blank"
           >
-            <span
-              >Utilisation du gestionnaire de disques et gestion du stockage</span
-            >
+            <span>
+              Utilisation du gestionnaire de disques et gestion du stockage
+              <small>MF 03</small>
+            </span>
           </a>
 
           <a
@@ -1630,7 +1635,10 @@
             download
             target="_blank"
           >
-            <span>Configuration complète d’un service DHCP</span>
+            <span>
+              Configuration complète d’un service DHCP
+              <small>MF 04</small>
+            </span>
           </a>
 
           <a
@@ -1639,26 +1647,55 @@
             download
             target="_blank"
           >
-            <span
-              >Mise en place et tests d’un atelier ACL (contrôle d’accès)</span
-            >
+            <span>
+              Mise en place et tests d’un atelier ACL (contrôle d’accès)
+              <small>MF 05</small>
+            </span>
           </a>
 
-          <!-- AJOUT mission formation 6 (GLPI) -->
+          <!-- mission formation 6 (GLPI) -->
           <a
             href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/mission%20formation%206.docx?d=w6996f59592164a9c81257823b778fa1d&csf=1&web=1&e=QtwEXM"
             class="mission-card tap-bump"
             download
             target="_blank"
           >
-            <span
-              >Mise en place d’un serveur GLPI (outil de ticketing et gestion de
-              parc)</span
-            >
+            <span>
+              Mise en place d’un serveur GLPI (outil de ticketing et gestion de
+              parc)
+              <small>MF 06</small>
+            </span>
+          </a>
+
+          <!-- AJOUT : Installation serveur WEB -->
+          <a
+            href="https://1drv.ms/w/c/3c089fa1bf123036/IQDL3BtfwRJJT6iQ-XvC1BfpAQ1rW94Ml0p71XxFd2cAdxw?e=XmUTwv"
+            class="mission-card tap-bump"
+            download
+            target="_blank"
+          >
+            <span>
+              Installation serveur WEB
+              <small>MF 07</small>
+            </span>
+          </a>
+
+          <!-- AJOUT : Déploiement site -->
+          <a
+            href="https://1drv.ms/w/c/3c089fa1bf123036/IQDqfAJ42VQmQa_Hko3dqmFyAfb5Ma3FogP-T7t-qURhyvA?e=RG384u"
+            class="mission-card tap-bump"
+            download
+            target="_blank"
+          >
+            <span>
+              Déploiement site
+              <small>MF 08</small>
+            </span>
           </a>
         </div>
       </section>
 
+      <!-- ===================== MODIFIÉ : ENTREPRISE ===================== -->
       <section id="epreuveE5_entreprise" aria-labelledby="e5e-title">
         <h2 id="e5e-title">Missions réalisées en entreprise</h2>
 
@@ -1674,7 +1711,7 @@
             <span>
               Installation et configuration de matériel informatique (PC,
               imprimantes, écrans)
-              <small>ME-A2-01</small>
+              <small>ME 01</small>
             </span>
           </a>
 
@@ -1688,7 +1725,7 @@
           >
             <span>
               Gestion des comptes utilisateurs dans Active Directory
-              <small>ME-A2-02</small>
+              <small>ME 02</small>
             </span>
           </a>
 
@@ -1703,7 +1740,7 @@
             <span>
               Formation des utilisateurs aux outils informatiques (OneDrive,
               KeePass, outils internes)
-              <small>ME-A2-03</small>
+              <small>ME 03</small>
             </span>
           </a>
 
@@ -1717,7 +1754,7 @@
           >
             <span>
               Gestion du parc informatique et des licences logicielles
-              <small>ME-A2-04</small>
+              <small>ME 04</small>
             </span>
           </a>
 
@@ -1732,7 +1769,7 @@
             <span>
               Rédaction de procédures pour les utilisateurs en télétravail et en
               mobilité
-              <small>ME-A2-05</small>
+              <small>ME 05</small>
             </span>
           </a>
 
@@ -1746,11 +1783,10 @@
           >
             <span>
               Résolution d’incidents réseau et support informatique
-              <small>ME-A2-06</small>
+              <small>ME 06</small>
             </span>
           </a>
 
-          <!-- AJOUT (AVEC LIEN) -->
           <a
             href="https://1drv.ms/w/c/3c089fa1bf123036/IQDlQ208AMXPSq_TfIDK29DrAUVukWj8W97WvtA3FijEO30?e=QZU0Ou"
             class="mission-card tap-bump"
@@ -1761,28 +1797,38 @@
             <span>
               Intégration et configuration d’outils de téléphonie mobile (iOS /
               Android)
-              <small>ME-A2-07</small>
+              <small>ME 07</small>
             </span>
           </a>
 
-          <!-- AJOUT (SANS LIEN) -->
-          <div class="mission-card">
+          <a
+            href="https://1drv.ms/w/c/3c089fa1bf123036/IQCCjoGGocLhTb-sIdxOfy2nAZRHvYCd5-bn74hIoiR2FG4?e=Z1of95"
+            class="mission-card tap-bump"
+            target="_blank"
+            rel="noopener"
+            title="Participation active aux instances de pilotage Microsoft pour l’optimisation continue de l’environnement"
+          >
             <span>
               Participation active aux instances de pilotage Microsoft pour
               l’optimisation continue de l’environnement
-              <small>ME-A2-08</small>
+              <small>ME 08</small>
             </span>
-          </div>
+          </a>
 
-          <!-- AJOUT (SANS LIEN) -->
-          <div class="mission-card">
+          <a
+            href="https://1drv.ms/w/c/3c089fa1bf123036/IQASTY_U2u3xRqYqIMYIRixrAUaRGpcA6Psx3zoc3ky8Boc?e=mrCc8K"
+            class="mission-card tap-bump"
+            target="_blank"
+            rel="noopener"
+            title="Vérification des droits d’accès sur un serveur de fichiers / Contrôle groupes Active Directory"
+          >
             <span>
               Vérification des droits d’accès sur un serveur de fichiers<br />
               Contrôle de l’appartenance des utilisateurs aux groupes Active
               Directory
-              <small>ME-A2-09</small>
+              <small>ME 09</small>
             </span>
-          </div>
+          </a>
         </div>
       </section>
 
