--- a/index.html
+++ b/index.html
@@ -1586,10 +1586,10 @@
             download
             target="_blank"
           >
-            <span
-              >Découverte et présentation des réseaux sans-fil Wi-Fi /
-              Bluetooth</span
-            >
+            <span>
+              Découverte et présentation des réseaux sans-fil Wi-Fi / Bluetooth
+              <small>MF 01</small>
+            </span>
           </a>
 
           <a
@@ -1598,7 +1598,10 @@
             download
             target="_blank"
           >
-            <span>Étude et mise en œuvre des protocoles ICMP et ARP</span>
+            <span>
+              Étude et mise en œuvre des protocoles ICMP et ARP
+              <small>MF 02</small>
+            </span>
           </a>
 
           <!-- MAJ lien -->
@@ -1608,9 +1611,10 @@
             download
             target="_blank"
           >
-            <span
-              >Utilisation du gestionnaire de disques et gestion du stockage</span
-            >
+            <span>
+              Utilisation du gestionnaire de disques et gestion du stockage
+              <small>MF 03</small>
+            </span>
           </a>
 
           <!-- MAJ lien -->
@@ -1620,7 +1624,10 @@
             download
             target="_blank"
           >
-            <span>Configuration complète d’un service DHCP</span>
+            <span>
+              Configuration complète d’un service DHCP
+              <small>MF 04</small>
+            </span>
           </a>
 
           <!-- MAJ lien -->
@@ -1630,9 +1637,10 @@
             download
             target="_blank"
           >
-            <span
-              >Mise en place et tests d’un atelier ACL (contrôle d’accès)</span
-            >
+            <span>
+              Mise en place et tests d’un atelier ACL (contrôle d’accès)
+              <small>MF 05</small>
+            </span>
           </a>
 
           <!-- Mission formation 6 (GLPI) -->
@@ -1642,10 +1650,11 @@
             download
             target="_blank"
           >
-            <span
-              >Mise en place d’un serveur GLPI (outil de ticketing et gestion de
-              parc)</span
-            >
+            <span>
+              Mise en place d’un serveur GLPI (outil de ticketing et gestion de
+              parc)
+              <small>MF 06</small>
+            </span>
           </a>
 
           <!-- AJOUT MF 07 -->
@@ -1658,7 +1667,7 @@
           >
             <span>
               Installation web
-              <small>MF-07</small>
+              <small>MF 07</small>
             </span>
           </a>
 
@@ -1672,7 +1681,7 @@
           >
             <span>
               Déploiement site
-              <small>MF-08</small>
+              <small>MF 08</small>
             </span>
           </a>
         </div>
@@ -1693,7 +1702,7 @@
             <span>
               Installation et configuration de matériel informatique (PC,
               imprimantes, écrans)
-              <small>ME-A2-01</small>
+              <small>ME 01</small>
             </span>
           </a>
 
@@ -1707,7 +1716,7 @@
           >
             <span>
               Gestion des comptes utilisateurs dans Active Directory
-              <small>ME-A2-02</small>
+              <small>ME 02</small>
             </span>
           </a>
 
@@ -1722,7 +1731,7 @@
             <span>
               Formation des utilisateurs aux outils informatiques (OneDrive,
               KeePass, outils internes)
-              <small>ME-A2-03</small>
+              <small>ME 03</small>
             </span>
           </a>
 
@@ -1736,7 +1745,7 @@
           >
             <span>
               Gestion du parc informatique et des licences logicielles
-              <small>ME-A2-04</small>
+              <small>ME 04</small>
             </span>
           </a>
 
@@ -1751,7 +1760,7 @@
             <span>
               Rédaction de procédures pour les utilisateurs en télétravail et en
               mobilité
-              <small>ME-A2-05</small>
+              <small>ME 05</small>
             </span>
           </a>
 
@@ -1766,7 +1775,7 @@
           >
             <span>
               Résolution d’incidents réseau et support informatique
-              <small>ME-A2-06</small>
+              <small>ME 06</small>
             </span>
           </a>
 
@@ -1781,7 +1790,7 @@
             <span>
               Intégration et configuration d’outils de téléphonie mobile (iOS et
               Android)
-              <small>ME-A2-07</small>
+              <small>ME 07</small>
             </span>
           </a>
 
@@ -1796,7 +1805,7 @@
             <span>
               Participation active aux instances de pilotage Microsoft pour
               l’optimisation continue de l’environnement
-              <small>ME-A2-08</small>
+              <small>ME 08</small>
             </span>
           </a>
 
@@ -1811,7 +1820,7 @@
             <span>
               Vérification et gestion des droits d’accès sur un serveur de
               fichiers (NAS)
-              <small>ME-A2-09</small>
+              <small>ME 09</small>
             </span>
           </a>
         </div>
