--- a/index.html
+++ b/index.html
@@ -1565,266 +1565,254 @@
           <ul>
             <li>
               <a
-                href="https://cerfal-my.sharepoint.com/:x:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/6-%20Annexe%206-1%20-%20Tableau%20de%20synth%C3%A8se%20-%20Epreuve%20E4%20-%20BTS%20SIO%202023(1)%201%20(1)%201%20(1).xlsx?d=w7e17be3aaae74b8ab48284ea5029cac5&csf=1&web=1&e=MBAwnh"
-                target="_blank"
-                style="display: block; margin-top: 6px; font-weight: 600"
-              >
-                Ouvrir le tableau de synthèse en ligne (OneDrive)
-              </a>
+  href="Tableau de Synthèse.pdf"
+  target="_blank"
+  rel="noopener"
+  style="display: block; margin-top: 6px; font-weight: 600"
+>
+  Ouvrir le tableau de synthèse (PDF)
+</a>
+
             </li>
           </ul>
         </div>
       </section>
 
       <section id="epreuveE5_formation" aria-labelledby="e5f-title">
-        <h2 id="e5f-title">Missions réalisées en formation</h2>
+  <h2 id="e5f-title">Missions réalisées en formation</h2>
 
-        <div class="mission-section">
-          <a
-            href="https://1drv.ms/b/c/3c089fa1bf123036/EfG95I9G5L5Jn8XApEhicGYBrEdwdzm9DXMFw1PshJVRCw?e=5zoAZj"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-          >
-            <span>
-              Découverte et présentation des réseaux sans-fil Wi-Fi / Bluetooth
-              <small>MF 01</small>
-            </span>
-          </a>
+  <div class="mission-section">
+    <a
+      href="MF01.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+    >
+      <span>
+        Découverte et présentation des réseaux sans-fil Wi-Fi / Bluetooth
+        <small>MF 01</small>
+      </span>
+    </a>
 
-          <a
-            href="https://1drv.ms/b/c/3c089fa1bf123036/EZR4RKk8IDBOqDHdPqVyZ2cBMVhIKTpKDyD1MzVyZghdIg?e=EOxzDG"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-          >
-            <span>
-              Étude et mise en œuvre des protocoles ICMP et ARP
-              <small>MF 02</small>
-            </span>
-          </a>
+    <a
+      href="MF02.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+    >
+      <span>
+        Étude et mise en œuvre des protocoles ICMP et ARP
+        <small>MF 02</small>
+      </span>
+    </a>
 
-          <!-- MAJ lien -->
-          <a
-            href="https://1drv.ms/w/c/3c089fa1bf123036/IQBtBpSAuc7xR4iT7JRTzoKeAdJPT8hKuz_n9NEeq-Tb6RE?e=KH5oN2"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-          >
-            <span>
-              Utilisation du gestionnaire de disques et gestion du stockage
-              <small>MF 03</small>
-            </span>
-          </a>
+    <a
+      href="MF03.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+    >
+      <span>
+        Utilisation du gestionnaire de disques et gestion du stockage
+        <small>MF 03</small>
+      </span>
+    </a>
 
-          <!-- MAJ lien -->
-          <a
-            href="https://1drv.ms/w/c/3c089fa1bf123036/IQCTsV81F6kLTp2wRbNRq1MCAbmmaHz-zvPS3grx4raJ3U4?e=FMqqRH"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-          >
-            <span>
-              Configuration complète d’un service DHCP
-              <small>MF 04</small>
-            </span>
-          </a>
+    <a
+      href="MF04.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+    >
+      <span>
+        Configuration complète d’un service DHCP
+        <small>MF 04</small>
+      </span>
+    </a>
 
-          <!-- MAJ lien -->
-          <a
-            href="https://1drv.ms/w/c/3c089fa1bf123036/IQA2S8VffMbjRLS-JN_w9v2RAQqW6VdmstJWfjGaY_gYb7k?e=AQJbMC"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-          >
-            <span>
-              Mise en place et tests d’un atelier ACL (contrôle d’accès)
-              <small>MF 05</small>
-            </span>
-          </a>
+    <a
+      href="MF05.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+    >
+      <span>
+        Mise en place et tests d’un atelier ACL (contrôle d’accès)
+        <small>MF 05</small>
+      </span>
+    </a>
 
-          <!-- Mission formation 6 (GLPI) -->
-          <a
-            href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/mission%20formation%206.docx?d=w6996f59592164a9c81257823b778fa1d&csf=1&web=1&e=QtwEXM"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-          >
-            <span>
-              Mise en place d’un serveur GLPI (outil de ticketing et gestion de
-              parc)
-              <small>MF 06</small>
-            </span>
-          </a>
+    <a
+      href="MF06.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+    >
+      <span>
+        Mise en place d’un serveur GLPI (outil de ticketing et gestion de parc)
+        <small>MF 06</small>
+      </span>
+    </a>
 
-          <!-- AJOUT MF 07 -->
-          <a
-            href="https://1drv.ms/w/c/3c089fa1bf123036/IQDGHVIGhCkVR5Pun0au8OOgAesjTlM89LPyLcuiv55pR-k?e=hPqDYb"
-            class="mission-card tap-bump"
-            target="_blank"
-            rel="noopener"
-            title="Installation web (MF 07)"
-          >
-            <span>
-              Installation web
-              <small>MF 07</small>
-            </span>
-          </a>
+    <a
+      href="MF07.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Installation web (MF 07)"
+    >
+      <span>
+        Installation web
+        <small>MF 07</small>
+      </span>
+    </a>
 
-          <!-- AJOUT MF 08 -->
-          <a
-            href="https://1drv.ms/w/c/3c089fa1bf123036/IQDIIKk25M1PS6rekRjsA4gaATIcFYdTlXDpXVQA2M68nAY?e=8DSKVx"
-            class="mission-card tap-bump"
-            target="_blank"
-            rel="noopener"
-            title="Déploiement site (MF 08)"
-          >
-            <span>
-              Déploiement site
-              <small>MF 08</small>
-            </span>
-          </a>
-        </div>
-      </section>
+    <a
+      href="MF08.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Déploiement site (MF 08)"
+    >
+      <span>
+        Déploiement site
+        <small>MF 08</small>
+      </span>
+    </a>
+  </div>
+</section>
+
+
 
       <section id="epreuveE5_entreprise" aria-labelledby="e5e-title">
-        <h2 id="e5e-title">Missions réalisées en entreprise</h2>
+  <h2 id="e5e-title">Missions réalisées en entreprise</h2>
 
-        <div class="mission-section">
-          <a
-            href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/entreprise%2012%201.docx?d=w90a30c0cbc394721950a2f1395ea5492&csf=1&web=1&e=OvRimI"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-            rel="noopener"
-            title="Installation et configuration de matériel informatique (PC, imprimante, écrans)"
-          >
-            <span>
-              Installation et configuration de matériel informatique (PC,
-              imprimantes, écrans)
-              <small>ME 01</small>
-            </span>
-          </a>
+  <div class="mission-section">
+    <a
+      href="ME01.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Installation et configuration de matériel informatique (PC, imprimantes, écrans)"
+    >
+      <span>
+        Installation et configuration de matériel informatique (PC,
+        imprimantes, écrans)
+        <small>ME 01</small>
+      </span>
+    </a>
 
-          <a
-            href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/Entreprise%202.docx?d=w4697b874160c4df4a59650f93e2d62d8&csf=1&web=1&e=SmCYV4"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-            rel="noopener"
-            title="Gestion des comptes utilisateurs (Active Directory)"
-          >
-            <span>
-              Gestion des comptes utilisateurs dans Active Directory
-              <small>ME 02</small>
-            </span>
-          </a>
+    <a
+      href="ME02.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Gestion des comptes utilisateurs (Active Directory)"
+    >
+      <span>
+        Gestion des comptes utilisateurs dans Active Directory
+        <small>ME 02</small>
+      </span>
+    </a>
 
-          <a
-            href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/Entreprise%203.docx?d=wf93901cf04c245c19da931f85cbad48e&csf=1&web=1&e=R1CYxe"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-            rel="noopener"
-            title="Formation des utilisateurs aux outils (OneDrive, KeePass, interface entreprise)"
-          >
-            <span>
-              Formation des utilisateurs aux outils informatiques (OneDrive,
-              KeePass, outils internes)
-              <small>ME 03</small>
-            </span>
-          </a>
+    <a
+      href="ME03.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Formation des utilisateurs aux outils (OneDrive, KeePass, outils internes)"
+    >
+      <span>
+        Formation des utilisateurs aux outils informatiques (OneDrive,
+        KeePass, outils internes)
+        <small>ME 03</small>
+      </span>
+    </a>
 
-          <a
-            href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/Entreprise%204.docx?d=w80d25d3b00cd4c9aab9646db3ac62af7&csf=1&web=1&e=AVKrtG"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-            rel="noopener"
-            title="Gestion du parc informatique (inventaire, suivi, licences)"
-          >
-            <span>
-              Gestion du parc informatique et des licences logicielles
-              <small>ME 04</small>
-            </span>
-          </a>
+    <a
+      href="ME04.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Gestion du parc informatique (inventaire, suivi, licences)"
+    >
+      <span>
+        Gestion du parc informatique et des licences logicielles
+        <small>ME 04</small>
+      </span>
+    </a>
 
-          <a
-            href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/Entreprise%205.docx?d=wb6ccdd7ed8174747865d97757778115c&csf=1&web=1&e=e28FSd"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-            rel="noopener"
-            title="Rédaction d’une procédure pour les utilisateurs en télétravail et en mobilité"
-          >
-            <span>
-              Rédaction de procédures pour les utilisateurs en télétravail et en
-              mobilité
-              <small>ME 05</small>
-            </span>
-          </a>
+    <a
+      href="ME05.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Rédaction d’une procédure pour les utilisateurs en télétravail et en mobilité"
+    >
+      <span>
+        Rédaction de procédures pour les utilisateurs en télétravail et en
+        mobilité
+        <small>ME 05</small>
+      </span>
+    </a>
 
-          <!-- MAJ lien ME 06 -->
-          <a
-            href="https://cerfal-my.sharepoint.com/:w:/r/personal/d_gouedart_cfacampusmontsouris_fr/Documents/entreprise%2012%201.docx?d=w90a30c0cbc394721950a2f1395ea5492&csf=1&web=1&e=qUisAQ"
-            class="mission-card tap-bump"
-            download
-            target="_blank"
-            rel="noopener"
-            title="Résolution d’un problème de réseau général"
-          >
-            <span>
-              Résolution d’incidents réseau et support informatique
-              <small>ME 06</small>
-            </span>
-          </a>
+    <a
+      href="ME06.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Résolution d’un problème de réseau général"
+    >
+      <span>
+        Résolution d’incidents réseau et support informatique
+        <small>ME 06</small>
+      </span>
+    </a>
 
-          <!-- MAJ lien ME07 -->
-          <a
-            href="https://1drv.ms/w/c/3c089fa1bf123036/IQDlQ208AMXPSq_TfIDK29DrAUVukWj8W97WvtA3FijEO30?e=OdtCbo"
-            class="mission-card tap-bump"
-            target="_blank"
-            rel="noopener"
-            title="Intégration et configuration d’outils de téléphonie mobile (iOS / Android)"
-          >
-            <span>
-              Intégration et configuration d’outils de téléphonie mobile (iOS et
-              Android)
-              <small>ME 07</small>
-            </span>
-          </a>
+    <a
+      href="ME07.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Intégration et configuration d’outils de téléphonie mobile (iOS / Android)"
+    >
+      <span>
+        Intégration et configuration d’outils de téléphonie mobile (iOS et
+        Android)
+        <small>ME 07</small>
+      </span>
+    </a>
 
-          <!-- AJOUT (AVEC LIEN) ME08 -->
-          <a
-            href="https://1drv.ms/w/c/3c089fa1bf123036/IQBsP_jCTEZuTLRBgzyyeeAaAR4EpMIWjg7eWEdliPaP3n0?e=SGG0NC"
-            class="mission-card tap-bump"
-            target="_blank"
-            rel="noopener"
-            title="Participation active aux instances de pilotage Microsoft"
-          >
-            <span>
-              Participation active aux instances de pilotage Microsoft pour
-              l’optimisation continue de l’environnement
-              <small>ME 08</small>
-            </span>
-          </a>
+    <a
+      href="ME08.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Participation active aux instances de pilotage Microsoft"
+    >
+      <span>
+        Participation active aux instances de pilotage Microsoft pour
+        l’optimisation continue de l’environnement
+        <small>ME 08</small>
+      </span>
+    </a>
 
-          <!-- AJOUT (AVEC LIEN) Mission 9 -->
-          <a
-            href="https://1drv.ms/w/c/3c089fa1bf123036/IQCfDwF0bCxjQrhASojoZ7z0AZ7pvviZVFHqTeJIjci3nG8?e=gZGFWU"
-            class="mission-card tap-bump"
-            target="_blank"
-            rel="noopener"
-            title="Vérification et gestion des droits d’accès sur un serveur de fichiers (NAS)"
-          >
-            <span>
-              Vérification et gestion des droits d’accès sur un serveur de
-              fichiers (NAS)
-              <small>ME 09</small>
-            </span>
-          </a>
-        </div>
-      </section>
+    <a
+      href="ME09.pdf"
+      class="mission-card tap-bump"
+      target="_blank"
+      rel="noopener"
+      title="Vérification et gestion des droits d’accès sur un serveur de fichiers (NAS)"
+    >
+      <span>
+        Vérification et gestion des droits d’accès sur un serveur de
+        fichiers (NAS)
+        <small>ME 09</small>
+      </span>
+    </a>
+  </div>
+</section>
+
 
       <section id="epreuveE5_certifications" aria-labelledby="e5c-title">
         <h2 id="e5c-title">Certifications obtenues</h2>
