--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@
           <ul>
             <li>
               <a
-  href="Tableau de Synthèse.pdf"
+  href="Tableau_de_Synthèse.pdf"
   target="_blank"
   rel="noopener"
   style="display: block; margin-top: 6px; font-weight: 600"
