--- a/index.html
+++ b/index.html
@@ -1565,7 +1565,7 @@
           <ul>
             <li>
               <a
-  href="Tableau_de_Synthese.pdf"
+  href="https://1drv.ms/b/c/3c089fa1bf123036/IQDSXwro1vf_RIPWf8sO4Vu-AUKLOyn4wN7_XE_0NitvGiw?e=TXJKxL.pdf"
   target="_blank"
   rel="noopener"
   style="display: block; margin-top: 6px; font-weight: 600"
